//生成命令  protoc --proto_path=:. --micro_out=. --go_out=. proto/*.proto

syntax = "proto3";

package go.micro.videoservice;

message CreateShareParam {
     int64 lastAuthorId = 1;
     int64 authorId = 2;
}

message CreateShareResponse {
    string result = 3;
}

// 服务接口
service CreateShareService {
    rpc CreateShare(CreateShareParam) returns (CreateShareResponse) {}
}
